# AdventOfCode2022

./: .gitignore  AdventOfCode2022.cabal  README.org  dev  dev.sh
app/: Main.hs
src/: Day1.hs
src/Day1/: Main.hs
src/Day2/: Main.hs
src/Day3/: Main.hs
src/Day4/: Main.hs
src/Day5/: Main.hs
src/Day6/: Main.hs
