cabal-version:      2.4
name:               AdventOfCode2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             SlimTim10
maintainer:         slimtim10@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    base ^>=4.14.3.0,
    hspec == 2.10.6

executable AdventOfCode2022
  import: shared-properties
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    AdventOfCode2022
  hs-source-dirs:   app
  default-language: Haskell2010

library
  import: shared-properties
  exposed-modules:
    Day1.Main
    Day2.Main
    Day3.Main
  build-depends:
    split == 0.2.3.5
  hs-source-dirs: src
  default-language: Haskell2010